2007-12-27  Tomas Cerha  <cerha@brailcom.org>

	* pytis/form/application.py (Application.create_data_object): New method.
	(create_data_object): New function.

	* pytis/form/form.py (Form._create_data_object): Use global
	function `create_data_object()'.

	* pytis/data/types_.py (DataEnumerator.rows): Added support for
	transactions.

	* pytis/data/data.py (Data.select_map): Pass the transaction to
	the `fetch()' calls.

	* pytis/form/commands_.py: New command
	`ListField.COMMAND_NEW_CODEBOOK_RECORD'.
	(ListField.COMMAND_INVOKE_EDIT_FORM): Renamed to	
	`ListField.COMMAND_EDIT_SELECTED'.

	* pytis/form/inputfield.py (ListField._create_ctrl): Adjust column
	widths according to column labels.
	(ListField._reload_enumeration): Respect the current transaction.
	(ListField._cmd_invoke_edit_form): Renamed to
	`_cmd_edit_selected'.
	(ListField._cmd_edit_selected): Respect the current transaction.
	Call `on_edit_record' if needed.
	(ListField._cmd_new_codebook_record): New command handler.
	(ListField._cmd_invoke_codebook_form): Reload enumeration after
	the codebook form is closed.

2007-12-14  Tomas Cerha  <cerha@brailcom.org>

	* pytis/form/inputfield.py (ListField._create_ctrl): Use
	`column_label()' instead of `label()'.
	(Invocable): Inline editation bug fixed.

2007-12-12  Tomas Cerha  <cerha@brailcom.org>

	* pytis/web/form.py: Added support for alternative layouts.  Don't
	align numeric fields in `EditForm'.

2007-12-07  Tomas Cerha  <cerha@brailcom.org>

	* pytis/web/form.py (BrowseForm): Added support for named styles.
	(LayoutForm): Align numeric fields in the layout.

	* pytis/presentation/spec.py (Style): New constructor argument and
	method `name'.
	(FieldStyle, FIELD_STYLE_DEFAULT, FIELD_STYLE_EMPHASIS)
	(FIELD_STYLE_WARNING): Removed.
	(ViewSpec): Default value of `row_style' set to None.

2007-12-06  Tomas Cerha  <cerha@brailcom.org>

	* pytis/presentation/spec.py (ViewSpec): Removed option
	`on_line_commit'.  Updated docstring for `cleanup'.
